--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -33,7 +33,7 @@
 	"Site": "Site",
 	"Styles": "Styles",
 	"Table actions": "Actions de table",
-	"Table": "tabulaire",
+	"Table": "Tabulaire",
 	"This is an extended version developed by:": "C'est une version étendue développée par : ${value}",
 	"Title": "légende",
 	"Unordered list": "Liste non ordonnée",
